ansible/files/istio-mtls-strict.yml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default

spec:
  mtls:
    mode: STRICT
