ansible/files/istio-mtls-plain-client.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-plain-client
  labels:
    app: istio-plain-client
spec:
  replicas: 1

  selector:
    matchLabels:
      app: istio-plain-client

  template:
    metadata:
      labels:
        app: istio-plain-client

    spec:
      serviceAccountName: istio-plain-client

      containers:
        - name: istio-plain-client
          image: curlimages/curl:8.12.1

          command:
            - /bin/sh
            - -c

          args:
            - |
              while true; do
                sleep 3600
              done

          resources:
            requests:
              cpu: 10m
              memory: 16Mi

            limits:
              cpu: 100m
              memory: 64Mi
