ansible/files/logging-test.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging-test

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-generator
  namespace: logging-test
  labels:
    app: log-generator

spec:
  replicas: 1

  selector:
    matchLabels:
      app: log-generator

  template:
    metadata:
      labels:
        app: log-generator

    spec:
      containers:
        - name: log-generator
          image: busybox:1.37

          command:
            - /bin/sh
            - -c

          args:
            - |
              [...]
