ansible/files/pvc-test.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: storage-test

---
apiVersion: v1
kind: Pod
metadata:
  name: pvc-test
  namespace: storage-test

spec:
  containers:
    - name: pvc-test
      image: busybox:1.36

      command:
        - sh
        - -c
        - |
          echo "PVC test container started"
          sleep infinity

      volumeMounts:
        - name: persistent-storage
          mountPath: /data

  volumes:
    - name: persistent-storage
      persistentVolumeClaim:
        claimName: ebs-pvc-test
