ansible/files/restart-test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restart-test
  namespace: monitoring-app
  labels:
    app: restart-test

spec:
  replicas: 1

  selector:
    matchLabels:
      app: restart-test

  template:
    metadata:
      labels:
        app: restart-test

    spec:
      containers:
        - name: restart-test
          image: busybox:1.36
          command:
            - sh
            - -c
            - |
              echo "restart-test container started"
              sleep 10
              exit 1
