ansible/files/istio-gateway-api-gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: istio-gateway-api-demo

spec:
  gatewayClassName: istio

  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: istio-gateway-api-options

  listeners:
    - name: http

      hostname: gateway-api-demo.local

      port: 80

      protocol: HTTP

      allowedRoutes:
        namespaces:
          from: Selector

          selector:
            matchLabels:
              kubernetes.io/metadata.name: istio-test
