ansible/files/istio-ingress-gateway.yml
---
apiVersion: networking.istio.io/v1
kind: Gateway

metadata:
  name: istio-ingress-demo-gateway

spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP

      hosts:
        - "istio-test/ingress-demo.local"
