ansible/files/istio-circuit-breaker-policy.yml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: istio-resilience-demo

spec:
  host: istio-resilience-demo

  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1

      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
