ansible/files/istio-gateway-api-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: istio-gateway-api-demo

spec:
  parentRefs:
    - name: istio-gateway-api-demo
      namespace: istio-ingress
      sectionName: http

  hostnames:
    - gateway-api-demo.local

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /gateway-api

      filters:
        - type: URLRewrite

          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /

      backendRefs:
        - name: istio-ingress-demo
          port: 80
