ansible/files/istio-resilience-policy.yml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: istio-resilience-demo

spec:
  host: istio-resilience-demo

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: istio-resilience-demo

spec:
  hosts:
    - istio-resilience-demo

  http:
    - name: retry-test

      match:
        - uri:
            exact: /retry

      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: 5xx,connect-failure,reset

      timeout: 5s

      route:
        - destination:
            host: istio-resilience-demo

    - name: timeout-test

      match:
        - uri:
            exact: /slow

      timeout: 1s

      route:
        - destination:
            host: istio-resilience-demo

    - name: fault-delay-test

      match:
        - uri:
            exact: /fault-delay

      fault:
        delay:
          percentage:
            value: 100.0

          fixedDelay: 2s

      route:
        - destination:
            host: istio-resilience-demo

    - name: fault-abort-test

      match:
        - uri:
            exact: /fault-abort

      fault:
        abort:
          percentage:
            value: 100.0

          httpStatus: 503

      route:
        - destination:
            host: istio-resilience-demo

    - name: default-route

      route:
        - destination:
            host: istio-resilience-demo
